--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,33 +5,68 @@
 <head>
     <title>Cadastro PROCERGS</title>
     <style>
-        body { font-family: sans-serif; padding: 20px; }
-        .campo { margin-bottom: 10px; }
-        label { display: block; font-weight: bold; }
-        .msg { color: green; font-weight: bold; margin-top: 15px; }
+        body {
+            font-family: sans-serif;
+            padding: 20px;
+        }
+
+        .campo {
+            margin-bottom: 10px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+        }
+
+        .msg {
+            color: green;
+            font-weight: bold;
+            margin-top: 15px;
+        }
     </style>
 </head>
 <body>
-    <h2>Cadastro de Candidatos</h2>
+<h2>Cadastro de Candidatos</h2>
 
-    <h:form>
-        <div class="campo">
-            <label>Nome:</label>
-            <h:inputText value="#{pessoaBean.pessoa.nome}" required="true" />
-        </div>
+<h:form>
+    <div class="campo">
+        <label>Nome:</label>
+        <h:inputText value="#{pessoaBean.pessoa.nome}" required="true"/>
+    </div>
 
-        <div class="campo">
-            <label>Cargo Pretendido:</label>
-            <h:inputText value="#{pessoaBean.pessoa.cargo}" required="true" />
-        </div>
+    <div class="campo">
+        <label>Cargo Pretendido:</label>
+        <h:inputText value="#{pessoaBean.pessoa.cargo}" required="true"/>
+    </div>
 
-        <h:commandButton value="Gravar no Banco" action="#{pessoaBean.salvar}">
-            <f:ajax execute="@form" render="@form" />
-        </h:commandButton>
+    <h:commandButton value="Gravar no Banco" action="#{pessoaBean.salvar}">
+        <f:ajax execute="@form" render="@form"/>
+    </h:commandButton>
 
-        <div class="msg">
-            <h:outputText value="#{pessoaBean.mensagem}" />
-        </div>
-    </h:form>
+    <div class="msg">
+        <h:outputText value="#{pessoaBean.mensagem}"/>
+    </div>
+</h:form>
+
+<hr/>
+<h3>Lista de Cadastrados</h3>
+
+<h:dataTable value="#{pessoaBean.listaPessoas}" var="p" border="1" cellpadding="5">
+    <h:column>
+        <f:facet name="header">ID</f:facet>
+        #{p.id}
+    </h:column>
+
+    <h:column>
+        <f:facet name="header">Nome</f:facet>
+        #{p.nome}
+    </h:column>
+
+    <h:column>
+        <f:facet name="header">Cargo</f:facet>
+        #{p.cargo}
+    </h:column>
+</h:dataTable>
 </body>
 </html>
