--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html"
       xmlns:f="jakarta.faces.core">
-<head>
+<h:head>
     <title>Cadastro PROCERGS</title>
     <style>
         body {
@@ -25,7 +25,7 @@
             margin-top: 15px;
         }
     </style>
-</head>
+</h:head>
 <body>
 <h2>Cadastro de Candidatos</h2>
 
@@ -47,26 +47,36 @@
     <div class="msg">
         <h:outputText value="#{pessoaBean.mensagem}"/>
     </div>
+
+
+    <hr/>
+    <h3>Lista de Cadastrados</h3>
+
+    <h:dataTable value="#{pessoaBean.listaPessoas}" var="p" border="1" cellpadding="5">
+        <h:column>
+            <f:facet name="header">ID</f:facet>
+            #{p.id}
+        </h:column>
+
+        <h:column>
+            <f:facet name="header">Nome</f:facet>
+            #{p.nome}
+        </h:column>
+
+        <h:column>
+            <f:facet name="header">Cargo</f:facet>
+            #{p.cargo}
+        </h:column>
+
+        <h:column>
+            <f:facet name="header">Ações</f:facet>
+
+            <h:commandButton value="Excluir" action="#{pessoaBean.excluir(p.id)}"
+                             onclick="return confirm('Tem certeza?');">
+                <f:ajax execute="@this" render="@form"/>
+            </h:commandButton>
+        </h:column>
+    </h:dataTable>
 </h:form>
-
-<hr/>
-<h3>Lista de Cadastrados</h3>
-
-<h:dataTable value="#{pessoaBean.listaPessoas}" var="p" border="1" cellpadding="5">
-    <h:column>
-        <f:facet name="header">ID</f:facet>
-        #{p.id}
-    </h:column>
-
-    <h:column>
-        <f:facet name="header">Nome</f:facet>
-        #{p.nome}
-    </h:column>
-
-    <h:column>
-        <f:facet name="header">Cargo</f:facet>
-        #{p.cargo}
-    </h:column>
-</h:dataTable>
 </body>
 </html>
