feat: implementação da edição (Update) e lógica de merge
Implementação do 'U' do CRUD (Update).

Alterações:
- Repository: Lógica inteligente no método `salvar` (decide entre `persist` e `merge` baseado no ID).
- Bean: Método `editar` para carregar dados da tabela para o formulário.
- View: Botão de edição com AJAX (`render="@form"`) para preencher os campos de input.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -75,6 +75,10 @@
                              onclick="return confirm('Tem certeza?');">
                 <f:ajax execute="@this" render="@form"/>
             </h:commandButton>
+
+            <h:commandButton value="Editar" action="#{pessoaBean.editar(p)}" style="margin-left: 5px;">
+                <f:ajax execute="@this" render="@form"/>
+            </h:commandButton>
         </h:column>
     </h:dataTable>
 </h:form>
